Fix: ios incompatability on mobile phone

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -15,7 +15,7 @@
   right: 0;  
   margin: 0 auto;
   max-width: 1200px;
-  width: calc(100% - 48px);
+  width: 100%;
 
 
   &.scrolled {
